--- a/frontend-angular/src/app/admin-template/admin-template.component.html
+++ b/frontend-angular/src/app/admin-template/admin-template.component.html
@@ -1,38 +1,40 @@
-<mat-toolbar color="primary">
-  <button mat-icon-button>
+<mat-toolbar color="primary" >
+  <button mat-icon-button (click)="drawer.toggle()">
     <mat-icon>menu</mat-icon>
   </button>
-    <span class="spacer"></span>
-  <button mat-button>Home</button>
-  <button mat-button>Profile</button>
-  <button  mat-button [matMenuTriggerFor]="importMenu" >
+  <span class="spacer"></span>
+  <button  mat-button routerLink="/home">Home</button>
+  <button  mat-button routerLink="/profile">Profile</button>
+  <button mat-button [matMenuTriggerFor]="importMenu" >
     <mat-icon iconPositionEnd>arrow_drop_down</mat-icon>
     Import
   </button>
   <mat-menu #importMenu>
-    <button mat-menu-item >Load Students</button>
-    <button mat-menu-item >Load Payments</button>
+    <button mat-menu-item routerLink="/loadStudents" >Load Students</button>
+    <button mat-menu-item routerLink="/loadPayments">Load Payments</button>
   </mat-menu>
-  <button mat-raised-button color="accent">Login</button>
+<!--  <button mat-button *ngIf="authService.authenticated==true">-->
+<!--    {{authService.username}}-->
+<!--  </button>-->
+  <button  mat-raised-button color="accent">logout</button>
 </mat-toolbar>
-
 <mat-drawer-container>
   <mat-drawer #drawer mode="side" position="start" opened="true">
     <mat-nav-list>
       <mat-list-item>
-        <button mat-button >
+        <button mat-button routerLink="/dashboard">
           <mat-icon>dashboard</mat-icon>
           Dashboard
         </button>
       </mat-list-item>
       <mat-list-item>
-        <button mat-button>
+        <button mat-button routerLink="/students">
           <mat-icon>dashboard</mat-icon>
           Students
         </button>
       </mat-list-item>
       <mat-list-item>
-        <button mat-button >
+        <button mat-button routerLink="/payments">
           <mat-icon>dashboard</mat-icon>
           Payments
         </button>
