--- a/frontend-angular/src/app/load-payments/load-payments.component.html
+++ b/frontend-angular/src/app/load-payments/load-payments.component.html
@@ -1,11 +1,11 @@
 <div class="container">
   <mat-card>
     <mat-card-header>
-      <mat-card-title>Dashboard title</mat-card-title>
+      <mat-card-title>Payments</mat-card-title>
     </mat-card-header>
     <mat-divider></mat-divider>
     <mat-card-content>
-      Dashboard Content
+      Payments Content
     </mat-card-content>
   </mat-card>
 </div>
