--- a/frontend-angular/src/app/students/students.component.html
+++ b/frontend-angular/src/app/students/students.component.html
@@ -9,7 +9,7 @@
     <mat-card-content>
       <mat-form-field appearance="outline">
         <mat-label>Filter</mat-label>
-        <input matInput >
+        <input matInput (change)="filterStudents($event)">
       </mat-form-field>
       <table matSort mat-table [dataSource]="dataSource" class="mat-elevation-z1">
 
@@ -30,12 +30,12 @@
           <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
         </ng-container>
 
-<!--        <ng-container matColumnDef="payments">-->
-<!--          <th mat-header-cell *matHeaderCellDef> Payments</th>-->
-<!--          <td mat-cell *matCellDef="let element">-->
-<!--            <button mat-raised-button color="primary">Payments</button>-->
-<!--          </td>-->
-<!--        </ng-container>-->
+        <ng-container matColumnDef="payments">
+          <th mat-header-cell *matHeaderCellDef> Payments</th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-raised-button color="primary">Payments</button>
+          </td>
+        </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
