--- a/frontend-angular/src/app/students/students.component.html
+++ b/frontend-angular/src/app/students/students.component.html
@@ -33,7 +33,7 @@
         <ng-container matColumnDef="payments">
           <th mat-header-cell *matHeaderCellDef> Payments</th>
           <td mat-cell *matCellDef="let element">
-            <button mat-raised-button color="primary">Payments</button>
+            <button (click)="getPayments(element)" mat-raised-button color="primary">Payments</button>
           </td>
         </ng-container>
 
